    (hyunsik)

    TAJO-1899: Calling 'Arrays.asList()' with too few arguments cause memory 
    extravagance. (Contributed by Dongkyu Hwangbo, committed by jihoon)
  
    TAJO-1461: Follow Protocol Buffer Style Guide. (Contributed by David Chen,
    committed by hyunsik)

    TAJO-1768: Move Tajo into Java 8. (hyunsik)

  BUG FIXES

    TAJO-2163: No error message is showed when query execution failed. (Wonjun Hong via jihoon)

    TAJO-2150: Fix invalid implementation of date time in jdbc. (jinho)

    TAJO-2151: Fix broken CI. (jihoon)

    TAJO-2158: The concat_ws function can't support a tab separator.
    (Byunghwa Yun via jihoon)

    TAJO-2143: Fix race condition in task history writer. (jinho)

    TAJO-2140: TajoInternalError does not contains reason stack trace. (jinho)

    TAJO-2135: Invalid join result when join key columns contain nulls. (jihoon)

    TAJO-2110: Fix incorrect DateTime and remove hard coded tests. (jinho)

    TAJO-2119: Invalid sort result when sort key columns contain non-ascii values. 
    (jihoon)

    TAJO-2100: Add missing cancellation in defaultTaskScheduler when a worker is 
    no respond. (jinho)

    TAJO-2092: TestStorages.testNullHandlingTypesWithProjection occasionally fail.
    (jinho)

    TAJO-1793: result row count unmatched for UNION ALL. (jaehwa)

    TAJO-2082: Aggregation on a derived table which includes union can cause 
    incorrect result. (jihoon)

    TAJO-2081: Incorrect task locality on single node. (jinho)

    TAJO-2080: ArrayIndexOutOfBoundsException when performing aggregation on an 
    union block. (jihoon)

    TAJO-2078: TestTajoCli.testSelectResultWithNullTrueDeprecated occasionally
    fails. (Dongkyu Hwangbo via jaehwa)

    TAJO-2077: Join condition causes incorrect result, when a table has an empty 
    row file. (jinho)

    TAJO-2072: The constructor of RegionSizeCalculator changes for HBase 1.0.0 
    compatibility. (Byunghwa Yun via jinho)
